Firebase ha llegado

--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
         <link rel="stylesheet" href="css/css.css">
         <link rel="stylesheet" href="css/login.css">
         <title>Home</title>
+
+        <!-- FIREBASE -->
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+            https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
+
+        <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseConfig = {
+            apiKey: "AIzaSyCFA1xRtDeZRJ6LjqMP25hvKumsDc0LlwM",
+            authDomain: "acervointergeneracional.firebaseapp.com",
+            projectId: "acervointergeneracional",
+            storageBucket: "acervointergeneracional.appspot.com",
+            messagingSenderId: "23450529141",
+            appId: "1:23450529141:web:5a687bdbfaae5234def73c",
+            measurementId: "G-KRL71E4FEK"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+        </script>
+
+        <script src="js/check-page.js"></script>
+
     </head>
     <body>
         <!-- Message -->
@@ -27,6 +57,8 @@
                 <img class="img" src="media/img/entrando.svg">
             </div>
         </form>
+
+        <!-- OTHER SCRIPTS -->
 
         <script src="js/sweetalert2@10.js"></script>
         <script src="js/login-validate.js"></script>
