--- a/html/show_usrs.html
+++ b/html/show_usrs.html
@@ -17,6 +17,7 @@
             https://firebase.google.com/docs/web/setup#available-libraries -->
         <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-analytics.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-firestore.js"></script>
 
         <script>
         // Your web app's Firebase configuration
@@ -82,5 +83,7 @@
         <script src="../js/load-usr-cards.js"></script>
         <script src="../js/logout.js"></script>
         <script src="../js/loading.js"></script>
+        <script src="../js/sweetalert2@10.js"></script>
+        
     </body>
 </html>
