--- a/html/add_user.html
+++ b/html/add_user.html
@@ -12,31 +12,30 @@
     <!-- FIREBASE -->
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
             https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
 
     <script>
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       var firebaseConfig = {
-        apiKey: "AIzaSyCFA1xRtDeZRJ6LjqMP25hvKumsDc0LlwM",
-        authDomain: "acervointergeneracional.firebaseapp.com",
-        projectId: "acervointergeneracional",
-        storageBucket: "acervointergeneracional.appspot.com",
-        messagingSenderId: "23450529141",
-        appId: "1:23450529141:web:5a687bdbfaae5234def73c",
-        measurementId: "G-KRL71E4FEK",
+        apiKey: "AIzaSyBzbSG7p87D6-B1UtodvU64W8_Do15Wy10",
+        authDomain: "acervointergeneracional-9b1ff.firebaseapp.com",
+        projectId: "acervointergeneracional-9b1ff",
+        storageBucket: "acervointergeneracional-9b1ff.appspot.com",
+        messagingSenderId: "30380390354",
+        appId: "1:30380390354:web:5bb85d8191facdaf347a0b",
+        measurementId: "G-XVDKLGVS06",
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
     </script>
-
     <script src="../js/check-page.js"></script>
   </head>
   <body>
@@ -104,7 +103,6 @@
 
     <!-- OTHER SCRIPTS -->
     <script src="../js/logout.js"></script>
-    <script src="../js/loading.js"></script>
     <script src="../js/sweetalert2@10.js"></script>
     <script src="../js/add-user.js"></script>
   </body>
