--- a/html/add_vols.html
+++ b/html/add_vols.html
@@ -24,13 +24,13 @@
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       var firebaseConfig = {
-        apiKey: "AIzaSyCFA1xRtDeZRJ6LjqMP25hvKumsDc0LlwM",
-        authDomain: "acervointergeneracional.firebaseapp.com",
-        projectId: "acervointergeneracional",
-        storageBucket: "acervointergeneracional.appspot.com",
-        messagingSenderId: "23450529141",
-        appId: "1:23450529141:web:5a687bdbfaae5234def73c",
-        measurementId: "G-KRL71E4FEK",
+        apiKey: "AIzaSyBzbSG7p87D6-B1UtodvU64W8_Do15Wy10",
+        authDomain: "acervointergeneracional-9b1ff.firebaseapp.com",
+        projectId: "acervointergeneracional-9b1ff",
+        storageBucket: "acervointergeneracional-9b1ff.appspot.com",
+        messagingSenderId: "30380390354",
+        appId: "1:30380390354:web:5bb85d8191facdaf347a0b",
+        measurementId: "G-XVDKLGVS06",
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
@@ -104,7 +104,6 @@
 
     <!-- OTHER SCRIPTS -->
     <script src="../js/logout.js"></script>
-    <script src="../js/loading.js"></script>
     <script src="../js/sweetalert2@10.js"></script>
     <script src="../js/add-vol.js"></script>
   </body>
