--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
       </svg>
     </div>
 
+    <!-- Progress bar -->
+    <div class="progressbar"></div>
+
     <!-- Body -->
     <form id="form" action="html/show_vols.html" method="POST">
       <div class="container">
         <div class="vertical-container">
           <input
             type="text"
-            placeholder="user"
+            placeholder="email"
             class="input btn bg-color1"
             id="input-login"
             spellcheck="false"
