--- a/html/add_admin.html
+++ b/html/add_admin.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../css/css.css" />
     <link rel="stylesheet" href="../css/show_vol.css" />
     <link rel="stylesheet" href="../css/addform.css" />
+    <link rel="icon" href="../media/img/icon.png">
     <title>Add Admin</title>
 
     <!-- FIREBASE -->
-
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
 
