--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="css/login.css" />
     <title>Home</title>
 
+    <link rel="icon" href="media/img/icon.png">
+
     <!-- FIREBASE -->
 
+    <script src="js/firebaseinit.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
 
