--- a/html/add_user.html
+++ b/html/add_user.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/css.css" />
     <link rel="stylesheet" href="../css/show_vol.css" />
     <link rel="stylesheet" href="../css/addform.css" />
+    <link rel="icon" href="../media/img/icon.png">
     <title>Add User</title>
 
     <!-- FIREBASE -->
