--- a/html/show_vols.html
+++ b/html/show_vols.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/css.css" />
     <link rel="stylesheet" href="../css/show_vol.css" />
+    <link rel="icon" href="../media/img/icon.png">
     <title>Show Volunteers</title>
 
     <!-- FIREBASE -->
